fixed font on mobile for intro component

--- a/portfolio/public/output.css
+++ b/portfolio/public/output.css
@@ -810,6 +810,11 @@ video {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
+  .lg\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
   .lg\:text-7xl {
     font-size: 4.5rem;
     line-height: 1;
